Fix accumulated UI-hackery bugs.